--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,6 @@
 <resources>
     <string name="app_name">Mitch\'s Weather App</string>
-    <string name="temperature">73°</string>
+    <string name="temperature">%1$d°</string>
     <string name="st_paul_mn">St. Paul, MN</string>
     <string name="feelsLike">Feels like: 78°</string>
     <string name="low">Low 65°</string>
